--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,5 +7,13 @@
   },
   "patch": {
     "labels": ["automerge"]
-  }
+  },
+  "packageRules": [
+    {
+      "matchPackagePatterns": ["*"],
+      "matchUpdateTypes": ["minor", "patch"],
+      "groupName": "all non-major dependencies",
+      "groupSlug": "all-minor-patch"
+    }
+  ]
 }
