--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,20 @@
 {
-  "extends": ["react-app", "plugin:cypress/recommended"],
-  "env": {
-    "browser": true
-  },
-  "settings": {
-    "react": {
-      "pragma": "React",
-      "version": "detect"
-    }
-  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:cypress/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
   "rules": {
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "react/style-prop-object": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "@typescript-eslint/no-angle-bracket-type-assertion": "off",
     "import/no-anonymous-default-export": "off",
-    "no-console": ["warn", { "allow": ["info", "error", "warn"] }]
-  },
-  "parser": "@typescript-eslint/parser"
+    "no-console": ["warn", { "allow": ["info", "error", "warn", "table"] }],
+    "@next/next/no-img-element": "off",
+    "@next/next/no-html-link-for-pages": "off"
+  }
 }
