--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@babel/preset-env": "7.14.4",
     "@babel/preset-react": "7.13.13",
     "@babel/preset-typescript": "7.13.0",
-    "@biowaffeln/next-linaria": "0.0.1",
-    "@linaria/webpack-loader": "3.0.0-beta.6",
+    "@linaria/webpack-loader": "3.0.0-beta.13",
     "@next/bundle-analyzer": "12.0.4",
     "@testing-library/cypress": "8.0.2",
     "@types/node": "16.11.11",
@@ -45,9 +44,12 @@
   },
   "dependencies": {
     "babel-plugin-polished": "1.1.0",
-    "linaria": "3.0.0-beta.6",
+    "@linaria/babel-preset": "3.0.0-beta.13",
+    "@linaria/core": "3.0.0-beta.13",
+    "@linaria/react": "3.0.0-beta.13",
+    "@linaria/shaker": "3.0.0-beta.13",
     "next": "12.0.4",
-    "next-linaria": "0.11.0",
+    "next-linaria": "1.0.0-beta",
     "polished": "4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
