--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "jsx": "preserve",
-    "lib": ["dom", "esnext"],
+    "lib": [
+      "dom",
+      "esnext"
+    ],
     "moduleResolution": "node",
     "noEmit": true,
     "skipLibCheck": true,
@@ -10,9 +13,15 @@
     "strict": false,
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["./components/*"],
-      "@lib/*": ["./lib/*"],
-      "@config/*": ["./config/*"]
+      "@components/*": [
+        "./components/*"
+      ],
+      "@lib/*": [
+        "./lib/*"
+      ],
+      "@config/*": [
+        "./config/*"
+      ]
     },
     "target": "es5",
     "allowJs": true,
@@ -20,7 +29,8 @@
     "esModuleInterop": true,
     "module": "esnext",
     "isolatedModules": true,
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
@@ -28,5 +38,7 @@
     "**/*.tsx",
     "./node_modules/@sanity/base/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
