--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@linaria/core": "3.0.0-beta.13",
     "@linaria/react": "3.0.0-beta.13",
     "@linaria/shaker": "3.0.0-beta.13",
+    "@radix-ui/react-dialog": "0.1.5",
     "@radix-ui/react-radio-group": "0.1.4",
     "babel-plugin-polished": "1.1.0",
     "framer-motion": "5.5.5",
