--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-plugin-polished": "1.1.0",
     "framer-motion": "5.6.0",
     "graphql": "16.2.0",
+    "immer": "9.0.12",
     "next": "12.0.8",
     "next-linaria": "1.0.0-beta",
     "polished": "4.1.3",
@@ -65,6 +66,7 @@
     "react-dom": "17.0.2",
     "react-query": "3.34.8",
     "theme-system": "0.2.9",
-    "use-debounce": "7.0.1"
+    "use-debounce": "7.0.1",
+    "zustand": "3.6.9"
   }
 }
