--- a/package.json
+++ b/package.json
@@ -30,20 +30,13 @@
     "@types/node": "16.11.21",
     "@types/react": "17.0.38",
     "@types/react-dom": "17.0.6",
-    "@typescript-eslint/eslint-plugin": "5.10.0",
-    "@typescript-eslint/parser": "5.10.0",
+    "@typescript-eslint/eslint-plugin": "5.9.1",
+    "@typescript-eslint/parser": "5.9.1",
     "cypress": "9.2.0",
     "cypress-wait-until": "1.7.2",
-    "eslint": "8.6.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-config-react": "1.1.7",
-    "eslint-config-react-app": "7.0.0",
+    "eslint": "7.32.0",
+    "eslint-config-next": "12.0.8",
     "eslint-plugin-cypress": "2.12.1",
-    "eslint-plugin-flowtype": "5.7.2",
-    "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.28.0",
-    "eslint-plugin-react-hooks": "4.3.0",
     "prettier": "2.5.0",
     "prop-types": "15.8.1",
     "typescript": "4.5.4"
