--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
     "@radix-ui/react-dialog": "0.1.5",
     "@radix-ui/react-radio-group": "0.1.4",
     "babel-plugin-polished": "1.1.0",
+    "file-saver": "2.0.5",
     "framer-motion": "5.6.0",
-    "graphql": "16.2.0",
+    "graphql": "15.7.0",
     "immer": "9.0.12",
     "next": "12.0.8",
     "next-linaria": "1.0.0-beta",
@@ -58,6 +59,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "3.34.8",
+    "save-as": "0.1.8",
     "theme-system": "0.2.9",
     "use-debounce": "7.0.1",
     "zustand": "3.6.9"
