--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "next-linaria": "1.0.0-beta",
     "polished": "4.1.3",
     "react": "17.0.2",
+    "react-div-100vh": "0.7.0",
     "react-dom": "17.0.2",
     "react-query": "3.34.8",
     "save-as": "0.1.8",
