--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,19 @@
 {
-  "extends": [
-    "config:base"
+  "schedule": ["after 10pm and before 5am every weekday", "every weekend"],
+  "extends": ["config:base"],
+  "commitMessageSuffix": " (patch)",
+  "minor": {
+    "labels": ["automerge"]
+  },
+  "patch": {
+    "labels": ["automerge"]
+  },
+  "packageRules": [
+    {
+      "matchPackagePatterns": ["*"],
+      "matchUpdateTypes": ["minor", "patch"],
+      "groupName": "all non-major dependencies",
+      "groupSlug": "all-minor-patch"
+    }
   ]
 }
