--- a/package.json
+++ b/package.json
@@ -50,10 +50,11 @@
     "@radix-ui/react-radio-group": "0.1.4",
     "babel-plugin-polished": "1.1.0",
     "framer-motion": "5.6.0",
-    "immer": "9.0.12",
     "graphql": "16.3.0",
+    "immer": "9.0.12",
     "next": "12.1.0",
     "next-linaria": "1.0.0-beta",
+    "next-seo": "5.1.0",
     "polished": "4.1.4",
     "react": "17.0.2",
     "react-div-100vh": "0.7.0",
