--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@linaria/shaker": "3.0.0-beta.15",
     "@radix-ui/react-dialog": "0.1.7",
     "@radix-ui/react-radio-group": "0.1.5",
+    "@splitbee/web": "0.3.0",
     "babel-plugin-polished": "1.1.0",
     "framer-motion": "5.6.0",
     "graphql": "16.3.0",
